k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: task-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # --- INIT CONTAINERS BLOCK - Wait for database to be ready ---
      containers:
        - name: backend
          image: asia-south1-docker.pkg.dev/dev-ops-475910/task-repo-rajinie/task-api:latest
          ports:
            - containerPort: 8080
          # Environment variables using Kubernetes Secret for security
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 15
            timeoutSeconds: 5
